# zsh_script

./: .gitignore  README.md  _z_completion  demo.sh  install.sh  install_completion.sh  install_local.sh  pyproject.toml  uninstall.sh  z  z.py  z.sh  z_bash_completion.sh
lib/: common.sh  install_core.sh  uninstall_core.sh
mycli/: __init__.py  cli.py
