[project]
name = "mycli"
version = "0.1.0"
description = "A simple CLI application built with Click"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "pyinstaller>=6.15.0",
]

[project.scripts]
mycli = "mycli.cli:mycli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
